Fix 'Tabbing out from COLUMNS or SUBTASKS dynamic inputs (form array) is focusing on X button instead of next row.'

--- a/src/app/UI/custom-button/custom-button.component.scss
+++ b/src/app/UI/custom-button/custom-button.component.scss
@@ -9,6 +9,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &:focus {
+    outline: 1px solid $main-purple;
+  }
 }
 
 .large-size {
