Complete Menu Dropdown functionality.

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -17,10 +17,10 @@
       <app-floating-card>
         <ul class="floating-card-list">
           <li>
-            <button>Edit Board</button>
+            <button (click)="onEditBoard()">Edit Board</button>
           </li>
           <li class="delete-option">
-            <button>Delete Board</button>
+            <button (click)="onDeleteBoard()">Delete Board</button>
           </li>
         </ul>
       </app-floating-card>
