--- a/src/app/UI/floating-card/floating-card.component.scss
+++ b/src/app/UI/floating-card/floating-card.component.scss
@@ -4,7 +4,7 @@
   width: 200px;
   background-color: $white;
 
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 
   padding: 20px;
   border-radius: 8px;
