--- a/src/app/board/board-column/board-task/board-task.component.scss
+++ b/src/app/board/board-column/board-task/board-task.component.scss
@@ -8,7 +8,7 @@
 
   padding: 25px 20px;
 
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 
   &:hover {
     cursor: pointer;
