--- a/src/app/Task/manage-task/manage-task.component.scss
+++ b/src/app/Task/manage-task/manage-task.component.scss
@@ -1,5 +1,11 @@
 @import '../../../styles/variables';
 
+.custom-modal-title {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .subtask-list {
   display: flex;
   flex-direction: column;
