--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,7 +1,7 @@
 @if (boardColumns().length == 0) {
 <div class="empty-board-content">
   <h2>This board is empty. Create a new column to get started.</h2>
-  <app-custom-button mode="primary" size="large" (customClick)="onAddNewColumn(manageBoardModal)">
+  <app-custom-button mode="primary" size="large" (customClick)="onAddNewColumn()">
     + Add New Column
   </app-custom-button>
 </div>
@@ -13,8 +13,3 @@
   <app-board-column />
 </div>
 }
-
-<!-- Modal template for managing the complete board -->
-<ng-template #manageBoardModal let-manageBoardModal>
-  <app-manage-board [isNew]="false" [id]="boardId()" />
-</ng-template>
