Fix menu dropdown not dissapearing in view task component.

--- a/src/app/Task/view-task/view-task.component.html
+++ b/src/app/Task/view-task/view-task.component.html
@@ -5,7 +5,7 @@
       <app-icon-vertical-ellipsis />
     </div>
     @if (showFloatingCard()) {
-    <app-floating-card>
+    <app-floating-card (hideCard)="onHideCard()">
       <ul class="floating-card-list">
         <li>
           <button (click)="onEditTask()">Edit Task</button>
