Create mobile size variables/service, Align header (first part) to mobile structure

--- a/src/app/Task/manage-task/manage-task.component.html
+++ b/src/app/Task/manage-task/manage-task.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h2 class="custom-modal-title">{{isNew() ? 'Add' : 'Edit'}} Task</h2>
+  <h2 class="custom-modal-title">{{isNew() ? 'Add New' : 'Edit'}} Task</h2>
 </div>
 <div class="modal-body">
   <form class="custom-form" [formGroup]="form">
