--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,8 @@ $main-purple-hover: #A8A4FF;
 $red: #EA5555;
 $red-hover: #FF9898;
 
+$mobile-m-size: 375px;
+
 @mixin heading-xl {
   font-family: 'PlusJakartaSans-Bold', sans-serif;
   font-size: 24px;
