Apply styles for MOBILE size.

--- a/src/app/UI/custom-select/custom-select.component.html
+++ b/src/app/UI/custom-select/custom-select.component.html
@@ -4,5 +4,5 @@
     <option value="{{item.value}}">{{item.display}}</option>
     }
   </select>
-  <img src="assets/icon-chevron-down.svg" alt="" class="down-arrow" />
+  <app-icon-chevron-down class="down-arrow" />
 </div>
