--- a/src/app/layout/sidebar/board-list/board-list.component.html
+++ b/src/app/layout/sidebar/board-list/board-list.component.html
@@ -5,7 +5,7 @@
   }
 </ul>
 <ul>
-  <app-board-list-item boardName="+ Create New Board" [createMode]="true" (createNewBoard)="onCreateNewBoard(manageBoardModal)" />
+  <app-board-list-item boardName="+ Create New Board" [createMode]="true" (createNewBoard)="onCreateNewBoard()" />
 </ul>
 
 <!-- Modal template for managing the complete board -->
