--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-@if (!hideSidebar) {
-<app-sidebar (hideSidebar)="onHideSidebar()" />
-} @else {
-<app-show-sidebar (showSidebar)="onShowSidebar()" />
+@if (!isMobileMediumSize()) {
+  @if (!hideSidebar) {
+  <app-sidebar (hideSidebar)="onHideSidebar()" />
+  } @else {
+  <app-show-sidebar (showSidebar)="onShowSidebar()" />
+  }
 }
 
 <section class="main-content">
