Align remaining methods from BOARD SERVICE to HTTP requests

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -10,17 +10,17 @@
 <section class="title-section">
   <div class="title-search-group">
     @if (boardName() == '') {
-      <h1 class="choose-board-mobile">{{ isMobileMediumSize() ? '[Choose a board]' : ''}}</h1>
+    <h1 class="choose-board-mobile">{{ isMobileMediumSize() ? '[Choose a board]' : ''}}</h1>
     } @else {
-      <h1>{{boardName()}}</h1>
+    <h1>{{boardName()}}</h1>
     }
 
-    @if (isMobileMediumSize()) {     
-      @if (isChevronDownVisible()) {
-        <app-icon-chevron-down (customClick)="onChevronClick()" />
-      } @else {
-        <app-icon-chevron-up (customClick)="onChevronClick()" />
-      }
+    @if (isMobileMediumSize()) {
+    @if (isChevronDownVisible()) {
+    <app-icon-chevron-down (customClick)="onChevronClick()" />
+    } @else {
+    <app-icon-chevron-up (customClick)="onChevronClick()" />
+    }
     }
   </div>
   <div class="last-section">
@@ -31,6 +31,7 @@
       <app-icon-add-task-mobile />
       }
     </app-custom-button>
+    @if (activeBoardId()) {
     <div class="menu-ellipsis">
       <div class="pseudo-button" (click)="onToggleFloatingCard()">
         <app-icon-vertical-ellipsis />
@@ -48,5 +49,6 @@
       </app-floating-card>
       }
     </div>
+    }
   </div>
 </section>
