--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,28 +3,28 @@
 
 @font-face {
   font-family: 'PlusJakartaSans-Regular';
-  src: url('/assets/fonts/PlusJakartaSans-Regular.ttf') format('truetype');
+  src: url('~/assets/fonts/PlusJakartaSans-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'PlusJakartaSans-Medium';
-  src: url('/assets/fonts/PlusJakartaSans-Medium.ttf') format('truetype');
+  src: url('~/assets/fonts/PlusJakartaSans-Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'PlusJakartaSans-Bold';
-  src: url('/assets/fonts/PlusJakartaSans-Bold.ttf') format('truetype');
+  src: url('~/assets/fonts/PlusJakartaSans-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'PlusJakartaSans-ExtraBold';
-  src: url('/assets/fonts/PlusJakartaSans-ExtraBold.ttf') format('truetype');
+  src: url('~/assets/fonts/PlusJakartaSans-ExtraBold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
