--- a/src/app/UI/custom-button/custom-button.component.html
+++ b/src/app/UI/custom-button/custom-button.component.html
@@ -1,10 +1,10 @@
 <button class="custom-button" [ngClass]="{
-  'primary-mode': mode() == 'primary',
-  'secondary-mode': mode() == 'secondary',
-  'destructive-mode': mode() == 'destructive',
+  'primary-mode': mode() === 'primary',
+  'secondary-mode': mode() === 'secondary',
+  'destructive-mode': mode() === 'destructive',
 
-  'large-size': size() == 'large',
-  'small-size': size() == 'small',
+  'large-size': size() === 'large',
+  'small-size': size() === 'small',
 
   'disabled': disabled()
   }"
