--- a/src/app/board/manage-board/manage-board.component.html
+++ b/src/app/board/manage-board/manage-board.component.html
@@ -8,11 +8,11 @@
       <input type="text" class="form-control" id="boardName" placeholder="e.g Web Design" formControlName="boardName">
     </div>
     <div class="form-group">
-      <label>Columns</label>
+      <label for="columns">Columns</label>
       @if (form.controls.columns.controls.length == 0) {
       <p>Start adding columns to your board! 👇</p>
       } @else {
-      <div formArrayName="columns" class="columns-list">
+      <div id="columns" formArrayName="columns" class="columns-list">
         <!-- @for (item of getColumns; track $index) { // TO DO: Check if this is possible to be done with the newest approach of "for loop in template (@for)" -->
         <div class="column-section" *ngFor="let column of getColumns; let i = index" [formGroupName]="i">
           <input type="text" class="form-control" formControlName="name" placeholder="(*) Status name required">
